<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>patchworkpp</name>
  <version>0.0.0</version>
  <description>patchwork++ package</description>

  <maintainer email="sj98lee@kaist.ac.kr">Seungjae Lee</maintainer>


  <license>TODO</license>


  <build_depend>ros_environment</build_depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend>libpcl-all</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend condition="$ROS_VERSION == 1">jsk_recognition_msgs</depend>  
  <depend >cv_bridge</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <depend condition="$ROS_VERSION == 1">roslaunch</depend>
  <depend>libpcl-all-dev</depend>
  
  
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
